--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.15.6",
