--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "date-format": "^1.2.0",
+    "date-utils": "^1.2.21",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "express-fileupload": "^0.3.0",
     "express-flash": "0.0.2",
     "express-myconnection": "^1.0.4",
     "express-sessions": "^1.0.6",
     "express-validator": "^4.3.0",
     "formidable": "^1.1.1",
     "mysql": "^2.15.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "slack-node": "^0.1.8"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
