--- a/package.json
+++ b/package.json
@@ -40,7 +40,13 @@
     "express-sessions": "^1.0.6",
     "express-validator": "^4.3.0",
     "mysql": "^2.15.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "slack-node": "^0.1.8",
+    "formidable": "^1.1.1",
+    "date-format": "^1.2.0",
+    "date-utils": "^1.2.21"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
