--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-sessions": "^1.0.6",
     "express-validator": "^4.3.0",
     "formidable": "^1.1.1",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "path": "^0.12.7",
     "request": "^2.83.0",
